--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,40 @@
 .DS_Store
 Thumbs.db
 .hugo_build.lock
+
+# Archivos y carpetas ignorados comunes en proyectos de Git
+
+# Archivos de configuración local
+.idea/
+.vscode/
+.DS_Store
+
+# Archivos de construcción y de paquetes
+build/
+dist/
+node_modules/
+vendor/
+*.jar
+*.war
+
+# Archivos de registro y caché
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.swp
+
+# Archivos de respaldo y temporales
+*.bak
+*.tmp
+*.orig
+
+# Archivos de credenciales
+*.pem
+*.key
+*.pub
+
+# Otros archivos y carpetas ignorados
+Thumbs.db
+desktop.ini
